src/test/resources/failing/fail99.pnd
nums(x) : int
strID(x) <- x = #(a + b), nums(a), nums(b)